Enhance nk_coretech.tex by adding subsections for amorphous and crystalline semiconductors, insulators, and metals, along with references to relevant papers by Forouhi and Bloomer. Removed sections on OCD and TF measurements and conclusion for clarity.

--- a/tex/nk-coretech/nk_coretech.tex
+++ b/tex/nk-coretech/nk_coretech.tex
@@ -56,12 +56,29 @@ The F-B equations are combined with the physically valid Rigorous Coupled Wave A
 Thus, we first review the F-B dispersion equations, and then the analysis of OCD and TF measurements.  
 
 \section{F-B dispersion equations}
+The four papers~\cite{forouhi1986optical,forouhi1988optical,forouhi2019new,forouhi2021optical} on optical dispersion relations by Dr. Forouhi and Dr. Bloomer r
+epresent the core technology of n\&k Technology Inc.
+Next, we start to review those 4 papers one by one.
+
+\subsection{Amorphous semiconductors and dielectrics}
+The details in this subsection are all from paper~\cite{forouhi1986optical}.
 
 
-\section{Analysis of OCD and TF measurements}
+\subsection{Crystallnie semiconductors and dielectrics}
+The details in this subsection are all from paper~\cite{forouhi1988optical}.
 
 
-\section{Conclusion}
+\subsection{Insulators and semiconductors}
+The details in this subsection are all from paper~\cite{forouhi2019new}.
+
+
+\subsection{Metals}
+The details in this subsection are all from paper~\cite{forouhi2021optical}.
+
+% \section{Analysis of OCD and TF measurements}
+
+
+% \section{Conclusion}
 
 % \begin{widetext}
 % \begin{eqnarray}
@@ -221,7 +238,7 @@ A. R. Forouhi and I. Bloomer.
 throughout radio-waves to extreme ultraviolet spectral range}.
 Journal of Physics Communications \textbf{3}: 035022, 2019.
 
-\bibitem{forouhi20211optical}
+\bibitem{forouhi2021optical}
 A. R. Forouhi and I. Bloomer.
 \textit{Optical dispersion equations for metals applicable to the Far-IR
 through EUV spectral range}.
