Refine nk_coretech.tex by improving the phrasing in the F-B dispersion equations section for clarity and readability. Adjusted the description of the four key papers by Forouhi and Bloomer to enhance understanding.

--- a/tex/nk-coretech/nk_coretech.tex
+++ b/tex/nk-coretech/nk_coretech.tex
@@ -56,8 +56,8 @@ The F-B equations are combined with the physically valid Rigorous Coupled Wave A
 Thus, we first review the F-B dispersion equations, and then the analysis of OCD and TF measurements.  
 
 \section{F-B dispersion equations}
-The four papers~\cite{forouhi1986optical,forouhi1988optical,forouhi2019new,forouhi2021optical} on optical dispersion relations by Dr. Forouhi and Dr. Bloomer r
-epresent the core technology of n\&k Technology Inc.
+The four papers~\cite{forouhi1986optical,forouhi1988optical,forouhi2019new,forouhi2021optical} on optical dispersion relations 
+published by Dr. Forouhi and Dr. Bloomer represent the core technology of n\&k Technology Inc.
 Next, we start to review those 4 papers one by one.
 
 \subsection{Amorphous semiconductors and dielectrics}
