Update ocd_systems_RD_ch.tex: Change title and author details, replace logo, and update input file references for consistency

--- a/tex/ocd-systems/ocd_systems_RD_ch.tex
+++ b/tex/ocd-systems/ocd_systems_RD_ch.tex
@@ -171,19 +171,19 @@
 
 % Document title
 \title{\huge
-\CJKtextit{\textbf{DBO}量测设备的研发} \\
+\CJKtextit{n\&k光学量测设备的调研} \\
 \vspace{0.5cm}
 \rule{\linewidth}{0.1mm} \\
-\vspace{2.5cm}
-\includegraphics[scale=1.5]{mz_logo.pdf} \\
-\vspace{2.5cm}
-\LARGE $\mathtt{X}$研发组，研发中心 \\
-魅杰光电，上海浦东新区 \\
-\vspace{2cm} 
+\vspace{2cm}
+\includegraphics[scale=0.6]{nandk_deposit_photos.jpg} \\
+\vspace{1.5cm}
+\LARGE 功率器件量测机台 \\
+$\mathtt{Olympian}~\&~\mathtt{OptiPrime(X)}$系列 \\
+\vspace{1cm} 
 \LARGE 陈昂\medskip}
 
 \author{
-\color{magenta}\email{\href{mailto:chen.ang@mzsemi.com}{\LARGE\texttt{chen.ang@mzsemi.com}}}\\
+\color{magenta}\email{\href{mailto:chenang@outlook.com}{\LARGE\texttt{chenang@outlook.com}}}\\
 % \color{magenta}\email{\href{mailto:yj.ma@mzsemi.com}{\LARGE\texttt{yj.ma@mzsemi.com}}}\\
 % \color{magenta}\email{\href{mailto:xy.shi@mzsime.com}{\LARGE\texttt{xy.shi@mzsime.com}}}\\
 \medskip}
@@ -424,22 +424,17 @@
 
 \newpage
 \pagenumbering{arabic}
-\input{dbo_systems_RD_introduction.tex}
 
-\newpage
-\input{dbo_systems_RD_principle.tex}
-
-\newpage
-\input{dbo_systems_RD_yieldstar_overlay.tex}
+\input{ocd_systems_RD_introduction.tex}
 
 % \newpage
 % \input{dbo_systems_RD_dbo_optical_system_simulation.tex}
 
 \newpage
-\input{dbo_systems_RD_appendix.tex}
+\input{ocd_systems_RD_appendix.tex}
 
 \newpage
-\input{dbo_systems_RD_references.tex}
+\input{ocd_systems_RD_references.tex}
 
 
 
