Update ocd_systems_RD_ch.tex: Correct title formatting and improve image scaling for better presentation

--- a/tex/ocd-systems/ocd_systems_RD_ch.tex
+++ b/tex/ocd-systems/ocd_systems_RD_ch.tex
@@ -171,14 +171,14 @@
 
 % Document title
 \title{\huge
-\CJKtextit{n\&k光学量测设备的调研} \\
+\CJKtextit{$\mathtt{n\&k}$光学量测设备的调研} \\
 \vspace{0.5cm}
 \rule{\linewidth}{0.1mm} \\
 \vspace{2cm}
 \includegraphics[scale=0.6]{nandk_deposit_photos.jpg} \\
 \vspace{1.5cm}
 \LARGE 功率器件量测机台 \\
-$\mathtt{Olympian}~\&~\mathtt{OptiPrime(X)}$系列 \\
+$\mathtt{Olympian~\&~OptiPrime(X)}$系列 \\
 \vspace{1cm} 
 \LARGE 陈昂\medskip}
 
