Update ocd_systems_RD_ch.tex and ocd_systems_RD_cycle.tex: Revise document titles, improve image scaling, and enhance clarity in development process descriptions. Add ocd_systems_RD_nk_series.tex for competitor product analysis and remove ocd_systems_RD_principle.tex.

--- a/tex/ocd-systems/ocd_systems_RD_ch.tex
+++ b/tex/ocd-systems/ocd_systems_RD_ch.tex
@@ -171,14 +171,14 @@
 
 % Document title
 \title{\huge
-\CJKtextit{$\mathtt{n\&k}$光学量测设备的调研} \\
+\CJKtextit{\texttt{n\&k}光学量测设备的研发} \\
 \vspace{0.5cm}
 \rule{\linewidth}{0.1mm} \\
 \vspace{2cm}
-\includegraphics[scale=0.6]{nandk_deposit_photos.jpg} \\
+\includegraphics[scale=0.63]{nandk_deposit_photos.jpg} \\
 \vspace{1.5cm}
 \LARGE 功率器件量测机台 \\
-$\mathtt{Olympian~\&~OptiPrime(X)}$系列 \\
+\texttt{Olympian~\&~OptiPrime(X)}系列 \\
 \vspace{1cm} 
 \LARGE 陈昂\medskip}
 
@@ -425,13 +425,11 @@ $\mathtt{Olympian~\&~OptiPrime(X)}$系列 \\
 \newpage
 \pagenumbering{arabic}
 
-\input{ocd_systems_RD_introduction.tex}
-
-% \newpage
-% \input{dbo_systems_RD_dbo_optical_system_simulation.tex}
+\input{ocd_systems_RD_cycle.tex}
 
 \newpage
-\input{ocd_systems_RD_appendix.tex}
+\input{ocd_systems_RD_nk_series.tex}
+
 
 \newpage
 \input{ocd_systems_RD_references.tex}
