--- a/tex/ocd-systems/ocd_systems_RD_references.tex
+++ b/tex/ocd-systems/ocd_systems_RD_references.tex
@@ -2,45 +2,48 @@
 \addcontentsline{toc}{section}{参考文献}
 \begin{thebibliography}{99}
 
-\bibitem{yayi2016super}
-韦亚一.
-\CJKtextit{超大规模集成电路先进光刻理论与应用}.
-北京: 科学出版社, 2016.
+\bibitem{nktechnology}
+n\&k Technology Inc. \url{https://www.nandk.com}.
 
-\bibitem{adel2008diffraction}
-Mike Adel, Daniel Kandel, Vladimir Levinski, Joel Seligson and Alex Kuniavsky.
-\textit{Diffraction order control in overlay metrology -- a review of the roadmap options}.
-Metrology, Inspection, and Process Control for Microlithography XXIX, Proceedings Vol. \textbf{6922}: 692202, 2008.
+% \bibitem{yayi2016super}
+% 韦亚一.
+% \CJKtextit{超大规模集成电路先进光刻理论与应用}.
+% 北京: 科学出版社, 2016.
 
-\bibitem{qiang2020diffraction}
-伍强~等编著.
-\CJKtextit{衍射极限附近的光刻工艺}.
-北京: 清华大学出版社, 2020.
+% \bibitem{adel2008diffraction}
+% Mike Adel, Daniel Kandel, Vladimir Levinski, Joel Seligson and Alex Kuniavsky.
+% \textit{Diffraction order control in overlay metrology -- a review of the roadmap options}.
+% Metrology, Inspection, and Process Control for Microlithography XXIX, Proceedings Vol. \textbf{6922}: 692202, 2008.
 
-\bibitem{blancquaert2013diffraction}
-Yoann Blancquaert and Christophe Dezauzier.
-\textit{Diffraction based overlay and image based overlay on production flow for advanced technology node}.
-Metrology, Inspection, and Process Control for Microlithography XXVII, Proceedings Vol. \textbf{8681}: 86812O, 2013.
+% \bibitem{qiang2020diffraction}
+% 伍强~等编著.
+% \CJKtextit{衍射极限附近的光刻工艺}.
+% 北京: 清华大学出版社, 2020.
 
-\bibitem{swinkels2021spectral}
-Daan Swinkels.
-\textit{Spectral shaping for the next-generation overlay metrology}.
-Student thesis: Master, 2021.
+% \bibitem{blancquaert2013diffraction}
+% Yoann Blancquaert and Christophe Dezauzier.
+% \textit{Diffraction based overlay and image based overlay on production flow for advanced technology node}.
+% Metrology, Inspection, and Process Control for Microlithography XXVII, Proceedings Vol. \textbf{8681}: 86812O, 2013.
 
-\bibitem{sohn2006kohler}
-Yeung Joon Sohn, Bryan M. Barnes, Lowell Howard, Richard M. Silver, Ravikiran Attota and Michael T. Stocker.
-\textit{K\'{o}hler Illumination for High-resolution Optical Metrolog}.
-Metrology, Inspection, and Process Control for Microlithography X, Proceedings Vol. \textbf{6152}: 61523S, 2006.
+% \bibitem{swinkels2021spectral}
+% Daan Swinkels.
+% \textit{Spectral shaping for the next-generation overlay metrology}.
+% Student thesis: Master, 2021.
 
-\bibitem{hsieh2023designing}
-Hung-Chih Hsieh, Meng-Rong Wu and Xiang-Ting Huang.
-\textit{Designing highly precise overlay targets for asymmetric sidewall structures using quasi-periodic line widths and finite-difference time-domain simulation}.
-Sensors \textbf{23}: 4482, 2023.
+% \bibitem{sohn2006kohler}
+% Yeung Joon Sohn, Bryan M. Barnes, Lowell Howard, Richard M. Silver, Ravikiran Attota and Michael T. Stocker.
+% \textit{K\'{o}hler Illumination for High-resolution Optical Metrolog}.
+% Metrology, Inspection, and Process Control for Microlithography X, Proceedings Vol. \textbf{6152}: 61523S, 2006.
 
-\bibitem{goodman1996introduction}
-Joseph W. Goodman.
-\textit{Introduction to Fourier optics.}.
-Roberts \& Co., Englewood, Colo, 2nd edition, 1996.
+% \bibitem{hsieh2023designing}
+% Hung-Chih Hsieh, Meng-Rong Wu and Xiang-Ting Huang.
+% \textit{Designing highly precise overlay targets for asymmetric sidewall structures using quasi-periodic line widths and finite-difference time-domain simulation}.
+% Sensors \textbf{23}: 4482, 2023.
+
+% \bibitem{goodman1996introduction}
+% Joseph W. Goodman.
+% \textit{Introduction to Fourier optics.}.
+% Roberts \& Co., Englewood, Colo, 2nd edition, 1996.
 
 
 
